--- a/jeopardy.css
+++ b/jeopardy.css
@@ -1,7 +1,36 @@
 /* some colors you may find useful:
   #115ff4
-  #060ce9
+  
   #28a200
   #8d2ab5
   #74119c
 */
+
+body {
+  text-align: center;
+  font-size: 12pt;
+  background-color: #060ce9;
+  color: white;
+  border-collapse: collapse;
+}
+
+#jeopardy-head #jeopardy-body{
+  border: solid 1px white;
+  width: 12em;
+  padding: 1em;
+}
+
+#jeopardy-head{
+  text-transform: uppercase;
+  font-weight: bold;
+  height: 5em;
+  text-shadow: goldenrod 1px 1px;
+}
+
+#jeopardy-body{
+  height: 10em;
+}
+
+#jeopardy-body:hover {
+  cursor: pointer;
+}
