--- a/app.css
+++ b/app.css
@@ -25,7 +25,7 @@
   
   td{
     height: 10em;
-    
+    text-transform: capitalize;
     font-size: 10pt;
   }
   
@@ -34,5 +34,12 @@
   }
 
   #jeopardy-body:clicked {
-    background-color:#115ff4;
+    background-color:#3579f8;
+  }
+
+  #restart-button {
+    background-color: goldenrod;
+    font-size: 9pt;
+    color: black;
+    padding: 1pt;
   }
