pre data change

--- a/app.css
+++ b/app.css
@@ -60,7 +60,7 @@
     overflow-wrap: break-word;
   } */
 
-  #restart-button {
+  #restart{
     background-color: goldenrod;
     font-size: 9pt;
     color: black;
