jeopardy bug fix

--- a/app.css
+++ b/app.css
@@ -60,9 +60,9 @@
     overflow-wrap: break-word;
   } */
 
-  #restart{
+  /* #restart{
     background-color: goldenrod;
     font-size: 9pt;
     color: black;
     padding: 1pt;
-  }
+  } */
